Fixed index navbar layout issue

--- a/css/skins/skin-default.css
+++ b/css/skins/skin-default.css
@@ -110,7 +110,7 @@ blockquote::before,
 .hermes .tp-arr-titleholder,
 .testimonial.yellow,
 #ajaxloader {
-
+  background: #0016b9;
 }
 
 .tab.tab-bor .nav-tabs li.active a,
